add 'remove ToDo From LocalStorage and DOM' functionality

--- a/style.css
+++ b/style.css
@@ -6,3 +6,11 @@ body{
         text-align: center;
     }
 }
+
+.toDoContainer{
+    border: 2px solid red;
+}
+
+.todoItem{
+    border: 2px solid yellow;
+}
