--- a/style.css
+++ b/style.css
@@ -14,3 +14,111 @@ body{
 .todoItem{
     border: 2px solid yellow;
 }
+
+.required {
+    color: red;
+}
+
+
+/* modal styling begins */
+dialog {
+    margin: auto;
+    width: 500px;
+    height: 600px;
+    border: 5px solid rgb(61, 7, 255);
+    border-top-left-radius: 140px;
+    border-bottom-right-radius: 140px;
+    border-top-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    padding: 45px;
+    background-color: aquamarine;
+
+    & h2 {
+        margin: 28px 0px;
+        display: flex;
+        justify-content: center;
+        font-size: 2rem;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    &::backdrop {
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+}
+
+.modal-items {
+    margin: 18px 0px;
+    display: flex;
+    align-items: center;
+
+    & input {
+        width: 60%;
+        height: 30px;
+        font-size: 1.2rem;
+    }
+    
+    & textarea {
+        width: 60%;
+        height: 60px;
+        font-size: 1.2rem;
+    }
+
+    & label {
+        font-size: 1.2em;
+        font-weight: 800;
+        margin-right: 3px;
+    }
+}
+
+.submitBtn {
+    display: flex;
+    justify-content: center;
+    margin: 50px 0 0 0;
+
+    & input {
+        width: 130px;
+        height: 30px;
+        font-size: 1.2rem;
+        border-radius: 12px;
+
+        &:hover {
+            background-color: rgb(47, 255, 64);
+            cursor: pointer;
+        }
+    }
+}
+
+.haveReadTHisBook {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    & input {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+.modalCloseBtn {
+    display: flex;
+    justify-content: flex-end;
+
+    & button {
+        width: 30px;
+        height: 20px;
+        border-radius: 5px;
+
+        &:hover {
+            background-color: red;
+            color: white;
+        }
+    }
+}
+
+form div label:not(label[for="isRead"]) {
+    width: 130px;
+    display: inline-block;
+    text-align: right;
+}
+
+/* modal styling ends */
