--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body{
     }
 }
 
+#oldCategory, #oldCategoryIdentifier{
+    display: none;
+}
+
 h1{
     background-color: black;
     color: wheat;
@@ -22,11 +26,54 @@ h1{
 .categoryToDos{
     border: 2px solid red;
     background-color: rgb(55, 34, 75);
+    /* text-align: center; */
+    /* display: flex; 
+    justify-content: center; */
+}
+.categoryName{
+    border: 2px solid red;
+    /* background-color: rgb(55, 34, 75); */
+}
+
+.todoItemField{
+    padding: 8px;
+}
+
+.isCompletedP{
+    margin-right: auto;
+}
+
+.pEditRemoveBtnsContainer{
+    /* border: 2px solid red; */
+    display: flex;
+}
+
+.todoItemBtns{
+    margin: 0px 17px;
+}
+
+.todoItemBtns:nth-of-type(1){
+    background-color: rgb(218, 79, 79);
+    color: white;
+    &:hover {
+        background-color: rgb(196, 25, 25);
+        cursor: pointer;
+    }
+}
+
+.todoItemBtns:nth-of-type(2){
+    background-color: rgb(142, 248, 138);
+    color: black;
+    &:hover {
+        background-color: rgb(56, 224, 50);
+        cursor: pointer;
+    }
 }
 
 .todoItem{
-    border: 2px solid yellow;
-    margin: 15px;
+    border: 1px solid rgb(79, 206, 211);
+    margin: 2%;
+    /* width: 60%; */
 }
 
 .required {
@@ -48,9 +95,11 @@ h1{
         padding: 9px;
         width: 190px;
         cursor: pointer;
+        border: 7px solid yellowgreen;
 
         &:hover {
             background-color: rgb(245, 188, 82);
+            border: 7px solid green;
         }
         
         &.addNewToDoBtnMain{
