--- a/src/style.css
+++ b/src/style.css
@@ -21,8 +21,6 @@ body {
 .topMenu {
     background-color: black;
     color: wheat;
-    /* display: flex;
-    justify-content: center; */
     text-align: center;
 }
 
@@ -33,7 +31,6 @@ h1 {
 
 .missedCompletedTodosBtns {
     font-size: 1.2rem;
-    /* border-radius: 112px; */
     padding: 7px;
     width: 20rem;
     cursor: pointer;
@@ -42,39 +39,29 @@ h1 {
 }
 
 .missedCompletedTodosBtns:nth-of-type(1) {
-    
     background-color: rgb(55, 134, 59);
-    /* border: 7px solid yellowgreen;*/
 
     &:hover {
         background-color: rgb(64, 167, 70);
         color: black;
-        /* border: 7px solid green; */
     } 
 }
 .missedCompletedTodosBtns:nth-of-type(2) {
-
     background-color: rgb(139, 43, 43);
-    /* border: 7px solid yellowgreen;*/
 
     &:hover {
         background-color: rgb(189, 56, 56);
         color: black;
-        /* border: 7px solid green; */
     } 
 }
 
 .categoryToDos {
     border: 2px solid red;
     background-color: rgb(55, 34, 75);
-    /* text-align: center; */
-    /* display: flex; 
-    justify-content: center; */
 }
 
 .categoryName {
     border: 2px solid red;
-    /* background-color: rgb(55, 34, 75); */
 }
 
 .todoItemField {
@@ -86,7 +73,6 @@ h1 {
 }
 
 .pEditRemoveBtnsContainer {
-    /* border: 2px solid red; */
     display: flex;
 }
 
@@ -95,7 +81,7 @@ h1 {
     border-radius: 6px;
 }
 
-.todoItemBtns:nth-of-type(1) {
+.markCompletedBtn {
     background-color: rgb(142, 248, 138);
     color: black;
 
@@ -105,7 +91,7 @@ h1 {
     }
 }
 
-.todoItemBtns:nth-of-type(2) {
+.removeBtn {
     background-color: rgb(218, 79, 79);
     color: white;
 
@@ -115,7 +101,7 @@ h1 {
     }
 }
 
-.todoItemBtns:nth-of-type(3) {
+.editToDoBtn {
     background-color: rgb(57, 60, 255);
     color: white;
 
@@ -128,7 +114,6 @@ h1 {
 .todoItem {
     border: 1px solid rgb(79, 206, 211);
     margin: 2%;
-    /* width: 60%; */
 }
 
 .required {
