--- a/src/style.css
+++ b/src/style.css
@@ -162,7 +162,8 @@ h1 {
     text-align: center;
     font-size: 1.6rem;
     padding: 20px 12px;
-    background-color: rgb(42, 45, 255);
+    background-color: rgb(205, 207, 42);
+    color: black;
 }
 
 
