--- a/src/style.css
+++ b/src/style.css
@@ -5,12 +5,25 @@
 }
 
 body {
-    background-color: rebeccapurple;
+    background-image: linear-gradient(
+        45deg,
+        magenta,
+        rebeccapurple,
+        dodgerblue,
+        green
+      );
     color: wheat;
 
     &>h1 {
         text-align: center;
     }
+}
+
+.todosContainer {
+    min-height: calc(100vh - 185px); 
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 #oldCategory,
@@ -278,3 +291,27 @@ form div label:not(label[for="isRead"]) {
 }
 
 /* modal styling ends */
+
+
+
+
+
+footer {
+    background-color: black;
+    color: white;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    bottom: 0px;
+
+    & a {
+        color: rgb(159, 161, 155);
+        text-decoration: none;
+
+        &:hover {
+            color: rgb(204, 229, 153);
+        }
+    }
+}
